add shop system with purchases/custom items
